--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -228,7 +228,7 @@ let client = Client()
             <pre class="line-numbers"><code class="prism language-csharp" data-prism>using Appwrite;
 
 var client = new Client()
-  .SetEndpoint("http://cloud.appwrite.io/v1")  // Your Appwrite Endpoint
+  .SetEndpoint("https://cloud.appwrite.io/v1")  // Your Appwrite Endpoint
   .SetProject("[PROJECT_ID]")               // Your project ID
   .SetKey("919c2db5d4...a2a3346ad2");                        // Your secret API Key</code></pre>
         </div>
@@ -399,7 +399,7 @@ let client = Client()
             <pre class="line-numbers"><code class="prism language-csharp" data-prism>using Appwrite;
 
 var client = new Client()
-  .SetEndpoint("http://cloud.appwrite.io/v1")  // Your Appwrite Endpoint
+  .SetEndpoint("https://cloud.appwrite.io/v1")  // Your Appwrite Endpoint
   .SetProject("[PROJECT_ID]")               // Your project ID
   .SetJWT("919c2db5d4...a2a3346ad2");                        // Your secret JWT
 </code></pre>
@@ -763,7 +763,7 @@ using Appwrite.Services;
 using Appwrite.Models;
 
 var client = new Client()
-  .SetEndpoint("http://cloud.appwrite.io/v1")    // Your Appwrite Endpoint
+  .SetEndpoint("https://cloud.appwrite.io/v1")    // Your Appwrite Endpoint
   .SetProject("[PROJECT_ID]")                 // Your project ID
   .SetKey("cd868db89");                         // Your secret API key
 
